devices fixed overflowing

--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,6 @@ h2 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
 }
 
 .Header{
@@ -157,6 +156,9 @@ h2 {
      
 }
 @media only screen and (min-width: 750px  ){
+    .main {
+        height: 100vh;
+    }
     .Navbar__Hamburger{
      display: none;
     }
